--- a/index.html
+++ b/index.html
@@ -7,110 +7,106 @@
         Steven Crosby Software Engineer
     </title>
     <!--META-->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no"
-        name="viewport" />
+          name="viewport"/>
     <!--FONTS/CSS-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" type="text/css"
-        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" />
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="assets/css/material-kit.css" />
-    <link rel="prefetch" href="about.html" />
-    <link rel="prefetch" href="education.html" />
-    <link rel="prefetch" href="experience.html" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="assets/css/material-kit.css"/>
+    <link rel="prefetch" href="about.html"/>
+    <link rel="prefetch" href="education.html"/>
+    <link rel="prefetch" href="experience.html"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
+          rel="stylesheet">
 </head>
 
 <body class="profile-page sidebar-collapse">
-    <nav class="navbar navbar-color-on-scroll navbar-transparent    fixed-top  navbar-expand-lg " color-on-scroll="100"
-        id="sectionsNav">
-        <div class="container">
-            <div class="navbar-translate">
-                <a class="navbar-brand" href="#" style="font-family: Poppins; font-weight: 500;"> STEVEN CROSBY </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
+<nav class="navbar navbar-color-on-scroll navbar-transparent    fixed-top  navbar-expand-lg " id="sectionsNav">
+    <div class="container">
+        <div class="navbar-translate">
+            <a class="navbar-brand" href="#" style="font-family: Red Hat Display, sans-serif; font-weight: 500;"> STEVEN
+                CROSBY </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ml-auto" style="font-family: Poppins; font-weight: 500;">
-                    <li class="nav-item">
-                        <a href="about.html" class="nav-link">
-                            <i class="material-icons">mood</i> About Me
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="education.html" class="nav-link">
-                            <i class="material-icons">school</i> Education
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="experience.html" class="nav-link">
-                            <i class="material-icons">code</i> Experience
-                        </a>
-                    </li>
-                </ul>
-            </div>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
+            </button>
         </div>
-    </nav>
-
-    <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg_06.JPEG');">
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto" style="font-family: Red Hat Display, sans-serif; font-weight: 500;">
+                <li class="nav-item">
+                    <a href="about.html" class="nav-link">
+                        <i class="material-icons">mood</i> About Me
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="education.html" class="nav-link">
+                        <i class="material-icons">school</i> Education
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="experience.html" class="nav-link">
+                        <i class="material-icons">code</i> Experience
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <div class="main main-raised">
-        <div class="profile-content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 ml-auto mr-auto">
-                        <div class="profile">
-                            <div class="avatar">
-                                <img src="assets/img/profile_color.JPG" alt="Circle Image"
-                                    class="img-raised rounded-circle img-fluid" />
-                                <div class="name">
-                                    <h1 style="font-family: 'Poppins'; font-weight: 800;">
-                                        Steven Crosby
-                                    </h1>
-                                    <p>&ensp;</p>
-                                    <h3 style="font-family: 'Poppins'; font-weight: 600;">
-                                        Full-Stack Web Developer
-                                    </h3>
-                                    <p>&ensp;</p>
-                                    <h4 style="font-family: 'Poppins'; font-weight: 300;">
-                                        &ensp;JAVA&ensp; &ensp;PYTHON&ensp; &ensp;C++&ensp; &ensp;JAVASCRIPT&ensp;
-                                        &ensp;HTML-CSS&ensp;
-                                    </h4>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-8 ml-auto mr-auto">
-                                        <div class="profile-tabs">
-                                            <ul class="nav nav-pills nav-pills-icons justify-content-center">
-                                                <li class="nav-item">
-                                                    <a class="nav-link active" role="tab" href="about.html">About</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link active" role="tab"
-                                                        href="education.html">Education</a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a class="nav-link active" role="tab"
-                                                        href="experience.html">Experience</a>
-                                                </li>
-                                            </ul>
-                                            <div class="tab-content tab-space">
-                                                <div class="tab-pane active" id="pill1"></div>
-                                                <div class="tab-pane" id="pill2"></div>
-                                                <div class="tab-pane" id="pill3"></div>
-                                                <div class="tab-pane" id="pill4"></div>
-                                            </div>
+</nav>
+
+<div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg_06.JPEG');">
+</div>
+<div class="main main-raised">
+    <div class="profile-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 ml-auto mr-auto">
+                    <div class="profile">
+                        <div class="avatar">
+                            <img src="assets/img/profile_color.JPG" alt="Circle Image"
+                                 class="img-raised rounded-circle img-fluid"/>
+                            <div class="name">
+                                <h1 style="font-family: Red Hat Display, sans-serif; font-weight: 900;">
+                                    Steven Crosby
+                                </h1>
+                                <p>&ensp;</p>
+                                <h3 style="font-family: Red Hat Display, sans-serif; font-weight: 700;">
+                                    Full-Stack Web Developer
+                                </h3>
+                                <p>&ensp;</p>
+                                <h4 style="font-family: Red Hat Display, sans-serif; font-weight: 400;">
+                                    &ensp;JAVA&ensp; &ensp;PYTHON&ensp; &ensp;C++&ensp; &ensp;JAVASCRIPT&ensp;
+                                    &ensp;HTML-CSS&ensp;
+                                </h4>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-8 ml-auto mr-auto">
+                                    <div class="profile-tabs">
+                                        <ul class="nav nav-pills nav-pills-icons justify-content-center">
+                                            <li class="nav-item">
+                                                <a class="nav-link active" role="tab" href="about.html">About</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link active" role="tab"
+                                                   href="education.html">Education</a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a class="nav-link active" role="tab"
+                                                   href="experience.html">Experience</a>
+                                            </li>
+                                        </ul>
+                                        <div class="tab-content tab-space">
+                                            <div class="tab-pane active" id="pill1"></div>
+                                            <div class="tab-pane" id="pill2"></div>
+                                            <div class="tab-pane" id="pill3"></div>
+                                            <div class="tab-pane" id="pill4"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -121,59 +117,61 @@
             </div>
         </div>
     </div>
+</div>
 
-    <!--FOOTER-->
-    <footer class="footer footer-default">
-        <div class="container" style="font-family: Poppins; font-weight: 500;">
-            <nav class="float-left">
-                <ul>
-                    <li>
-                        <a href="https://github.com/scrosby09">
-                            GITHUB
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/scrosby09/">
-                            LINKEDIN
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://twitter.com/SCrosby09">
-                            TWITTER
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/steven.crosby09/">
-                            FACEBOOK
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
-    <!--JS Files-->
-    <script src="assets/js/jquery.min.js" type="text/javascript"></script>
-    <script src="assets/js/popper.min.js" type="text/javascript"></script>
-    <script src="assets/js/bootstrap-material-design.min.js" type="text/javascript"></script>
-    <script src="assets/js/moment.min.js"></script>
-    <script src="assets/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
-    <script src="assets/js/nouislider.min.js" type="text/javascript"></script>
-    <script src="assets/js/bootstrap-tagsinput.js"></script>
-    <script src="assets/js/bootstrap-selectpicker.js" type="text/javascript"></script>
-    <script src="assets/js/jasny-bootstrap.min.js" type="text/javascript"></script>
-    <script src="assets/js/jquery.flexisel.js" type="text/javascript"></script>
-    <script src="assets/js/modernizr.js"></script>
-    <script src="assets/js/vertical-nav.js" type="text/javascript"></script>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="assets/js/material-kit.js" type="text/javascript"></script>
-    <script>
-        $(document).ready(function () {
-            //init DateTimePickers
-            materialKit.initFormExtendedDatetimepickers();
+<!--FOOTER-->
+<footer class="footer footer-default">
+    <div class="container" style="font-family: Red Hat Display, sans-serif; font-weight: 500;">
+        <nav class="float-left">
+            <ul>
+                <li>
+                    <a href="https://github.com/scrosby09">
+                        GITHUB
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/scrosby09/">
+                        LINKEDIN
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/SCrosby09">
+                        TWITTER
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/steven.crosby09/">
+                        FACEBOOK
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</footer>
+</body>
+<!--JS Files-->
+<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="assets/js/popper.min.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap-material-design.min.js" type="text/javascript"></script>
+<script src="assets/js/moment.min.js"></script>
+<script src="assets/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
+<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap-tagsinput.js"></script>
+<script src="assets/js/bootstrap-selectpicker.js" type="text/javascript"></script>
+<script src="assets/js/jasny-bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/js/jquery.flexisel.js" type="text/javascript"></script>
+<script src="assets/js/modernizr.js"></script>
+<script src="assets/js/vertical-nav.js" type="text/javascript"></script>
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+<script src="assets/js/material-kit.js" type="text/javascript"></script>
+<script>
+    $(document).ready(function () {
+        //init DateTimePickers
+        materialKit.initFormExtendedDatetimepickers();
 
-            // Sliders Init
-            materialKit.initSliders();
-        });
-    </script>
+        // Sliders Init
+        materialKit.initSliders();
+    });
+</script>
 
 </html>
