--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
                     </h5>
                     <br/>
                     <div class="blockquote undefined">
-                        <ul style="font-family: Railway, sans-serif; font-weight: 400;">
+                        <ul style="font-family: Railway, sans-serif; font-weight: 300; list-style: none">
                             <li>
                                 I completed both US Army Basic and Advanced Training
                             </li>
