revisions and changed to Railway and Red Hat Display fonts

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <!--HEAD-->
 
 <head>
@@ -99,33 +99,34 @@
                     </h5>
                     <br/>
                     <div class="blockquote undefined">
-                        <ul style="font-family: Railway, sans-serif; font-weight: 300; list-style: none">
+                        <ul style="font-family: Railway, sans-serif; font-weight: 300; font-style: italic; list-style: none;">
                             <li>
                                 I completed both US Army Basic and Advanced Training
                             </li>
+                            <br>
                             <li>
                                 I've continued to pursue my college education
                             </li>
+                            <br>
                             <li>We've endured unexpected unemployment</li>
-                            <li>
+                            <li><br>
                                 We've moved several times
                             </li>
                         </ul>
                     </div>
-                    <br/>
+                    <br>
                     <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
                         And through all that, and much more, we've been raising four
                         curiously crazy children, ages 7 and younger.
                     </h5>
-
-                    <br/><br/>
                     <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
                         All my experiences have primed my talents and capabilities
                         for my future in software engineering. I believe that my innate curiosity
                         and imagination are essential to producing exceptional software. I have a
                         passion for creating the best programming solutions and applications that
                         I possibly can.
-                        <br/><br/>
+                    </h5>
+                    <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
                         I also believe that my success as a husband, father, soldier,
                         and collegiate student have demonstrated my grit and my ability to thrive under the rigors
                         required of a professional software engineer.
