--- a/education.html
+++ b/education.html
@@ -82,7 +82,7 @@
             <h2 style="font-family: Red Hat Display, sans-serif; font-weight: 700;">
                 Brigham Young University
             </h2>
-            <h3 style="font-family: Railway, sans-serif; font-weight: 700;">
+            <h3 style="font-family: Red Hat Display, sans-serif; font-weight: 700;">
                 Computer Science and Programming
             </h3>
             <div class="profile col-md-3 ml-auto mr-auto">
@@ -134,6 +134,9 @@
                 <h5 style="font-family: Railway, sans-serif; font-weight: 600;">
                     Relevant Coursework Completed
                 </h5>
+                <li style="font-family: Railway, sans-serif; font-weight: 500;">
+                    US Army ROTC Officer Training
+                </li>
                 <ul class="text-center col-sm-6 ml-auto mr-auto" style="list-style: none;">
                     <li style="font-family: Railway, sans-serif; font-weight: 500;">
                         Military-Science Tactical Leadership
@@ -147,9 +150,6 @@
                     <li style="font-family: Railway, sans-serif; font-weight: 500;">
                         Psychology Memory and Cognition
                     </li>
-                    <li style="font-family: Railway, sans-serif; font-weight: 500;">
-                        Introduction to Visual Arts
-                    </li>
                 </ul>
             </div>
         </div>
@@ -162,7 +162,7 @@
         <nav class="float-left">
             <ul>
                 <li>
-                    <a href="https://github.com/scrosby09">
+                    <a href="https://github.com/steven-crosby">
                         GITHUB
                     </a>
                 </li>
