--- a/experience.html
+++ b/experience.html
@@ -330,7 +330,7 @@
         <nav class="float-left">
             <ul>
                 <li>
-                    <a href="https://github.com/scrosby09">
+                    <a href="https://github.com/steven-crosby">
                         GITHUB
                     </a>
                 </li>
