--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 </h1>
                                 <p>&ensp;</p>
                                 <h3 style="font-family: Red Hat Display, sans-serif; font-weight: 700;">
-                                    Full-Stack Web Developer
+                                    Software Engineering and Development
                                 </h3>
                                 <p>&ensp;</p>
                                 <h4 style="font-family: Red Hat Display, sans-serif; font-weight: 400;">
@@ -127,7 +127,7 @@
         <nav class="float-left">
             <ul>
                 <li>
-                    <a href="https://github.com/scrosby09">
+                    <a href="https://github.com/steven-crosby">
                         GITHUB
                     </a>
                 </li>
