--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                         Let&apos;s dig deeper...
                     </h3>
                     <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
-                        My wife, Alexandria, and I have been together for 11 years.
+                        My wife, Alexandria, and I have been together for 12 years.
                         Our life together has been the most incredible blessing
                         and unpredictable story I can imagine. Since we were married in 2009:
                     </h5>
@@ -117,11 +117,11 @@
                     <br>
                     <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
                         And through all that, and much more, we've been raising four
-                        curiously crazy children, ages 7 and younger.
+                        curiously crazy children, ages 9 and younger.
                     </h5>
                     <h5 style="font-family: Railway, sans-serif; font-weight: 400;">
                         All my experiences have primed my talents and capabilities
-                        for my future in software engineering. I believe that my innate curiosity
+                        for my career in software engineering. I believe that my innate curiosity
                         and imagination are essential to producing exceptional software. I have a
                         passion for creating the best programming solutions and applications that
                         I possibly can.
