--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 </h1>
                                 <p>&ensp;</p>
                                 <h3 style="font-family: Red Hat Display, sans-serif; font-weight: 700;">
-                                    Software Engineering and Development
+                                    Software Programming and Development
                                 </h3>
                                 <p>&ensp;</p>
                                 <h4 style="font-family: Red Hat Display, sans-serif; font-weight: 400;">
