updated font family

--- a/index.html
+++ b/index.html
@@ -23,18 +23,20 @@
     <link rel="prefetch" href="about.html" />
     <link rel="prefetch" href="education.html" />
     <link rel="prefetch" href="experience.html" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       type="text/css"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
   </head>
 
+  <!--NAVIGATION-->
   <body class="profile-page sidebar-collapse">
     <nav
       class="navbar navbar-color-on-scroll navbar-transparent fixed-top navbar-expand-lg"
