updated style and fonts

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="assets/css/material-kit.css" />
-    <link rel="prefetch" href="about.html" />
+    <link rel="prefetch" href="index.html" />
     <link rel="prefetch" href="education.html" />
     <link rel="prefetch" href="experience.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
           <a
             class="navbar-brand"
             href="#"
-            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+            style="font-family: Roboto Flex, sans-serif; font-weight: 500"
           >
             STEVEN CROSBY
           </a>
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse">
           <ul
             class="navbar-nav ml-auto"
-            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+            style="font-family: Roboto Flex, sans-serif; font-weight: 500"
           >
             <li class="nav-item">
               <a href="index.html" class="nav-link">
@@ -99,15 +99,19 @@
         <div class="row">
           <div class="col-md-8">
             <h1
-              style="font-family: Red Hat Display, sans-serif; font-weight: 900"
+              style="
+                font-family: Nunito Sans, sans-serif;
+                font-weight: 800;
+                font-size: 6rem;
+              "
             >
-              Father. Husband. Soldier.<br />
-              Software Engineer.
+              About Me
             </h1>
-            <h5 style="font-family: Railway, sans-serif; font-weight: 700">
+            <p>&ensp; &ensp; &ensp; &ensp; &ensp; &ensp;</p>
+            <h5 style="font-family: Roboto Flex, sans-serif; font-weight: 700">
               Hello !
             </h5>
-            <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+            <h5 style="font-family: Roboto Flex, sans-serif; font-weight: 400">
               I'm Steven. I'm a veteran enterprise sales slayer who's now
               conquering software engineering. I'm proficient in full-stack
               development, including Python, Java, C++, JavaScript, HTML/CSS,
@@ -123,16 +127,15 @@
       <div class="container">
         <div class="section section-text">
           <div class="row">
-            <div class="col-md-8 ml-auto mr-auto">
+            <div class="col-md-10 ml-auto mr-auto">
               <h3
-                style="
-                  font-family: Red Hat Display, sans-serif;
-                  font-weight: 700;
-                "
+                style="font-family: Roboto Flex, sans-serif; font-weight: 700"
               >
                 Let&apos;s dig deeper...
               </h3>
-              <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+              <h5
+                style="font-family: Roboto Flex, sans-serif; font-weight: 400"
+              >
                 My wife, Alexandria, and I have been together for 12 years. Our
                 life together has been the most incredible blessing and
                 unpredictable story I can imagine. Since we were married in
@@ -142,7 +145,7 @@
               <div class="blockquote undefined">
                 <ul
                   style="
-                    font-family: Railway, sans-serif;
+                    font-family: Roboto Flex, sans-serif;
                     font-weight: 300;
                     font-style: italic;
                     list-style: none;
@@ -160,18 +163,24 @@
                 </ul>
               </div>
               <br />
-              <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+              <h5
+                style="font-family: Roboto Flex, sans-serif; font-weight: 400"
+              >
                 And through all that, and much more, we've been raising four
                 curiously crazy children, ages 9 and younger.
               </h5>
-              <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+              <h5
+                style="font-family: Roboto Flex, sans-serif; font-weight: 400"
+              >
                 All my experiences have primed my talents and capabilities for
                 my career in software engineering. I believe that my innate
                 curiosity and imagination are essential to producing exceptional
                 software. I have a passion for creating the best programming
                 solutions and applications that I possibly can.
               </h5>
-              <h5 style="font-family: Railway, sans-serif; font-weight: 400">
+              <h5
+                style="font-family: Roboto Flex, sans-serif; font-weight: 400"
+              >
                 I also believe that my success as a husband, father, soldier,
                 and collegiate student have demonstrated my grit and my ability
                 to thrive under the rigors required of a professional software
@@ -187,7 +196,7 @@
     <footer class="footer footer-default">
       <div
         class="container"
-        style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+        style="font-family: Roboto Flex, sans-serif; font-weight: 500"
       >
         <nav class="float-left">
           <ul>
