--- a/education.html
+++ b/education.html
@@ -21,7 +21,7 @@
     />
     <link rel="stylesheet" href="assets/css/material-kit.css" />
     <link rel="prefetch" href="about.html" />
-    <link rel="prefetch" href="education.html" />
+    <link rel="prefetch" href="index.html" />
     <link rel="prefetch" href="experience.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
           <a
             class="navbar-brand"
             href="#"
-            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+            style="font-family: Nunito Sans, sans-serif; font-weight: 500"
           >
             STEVEN CROSBY
           </a>
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse">
           <ul
             class="navbar-nav ml-auto"
-            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+            style="font-family: Roboto Flex, sans-serif; font-weight: 500"
           >
             <li class="nav-item">
               <a href="index.html" class="nav-link">
@@ -97,12 +97,13 @@
     >
       <div class="container">
         <div class="row">
-          <div class="col-md-8 ml-auto mr-auto">
+          <div class="col-md-10 ml-auto mr-auto">
             <div class="brand text-center">
               <h1
                 style="
-                  font-family: Red Hat Display, sans-serif;
-                  font-weight: 900;
+                  font-family: Nunito Sans, sans-serif;
+                  font-weight: 800;
+                  font-size: 6rem;
                 "
               >
                 Education
@@ -115,14 +116,10 @@
     <div class="main main-raised">
       <div class="container">
         <div class="section text-center">
-          <h2
-            style="font-family: Red Hat Display, sans-serif; font-weight: 700"
-          >
+          <h2 style="font-family: Nunito Sans, sans-serif; font-weight: 800">
             Brigham Young University
           </h2>
-          <h3
-            style="font-family: Red Hat Display, sans-serif; font-weight: 700"
-          >
+          <h3 style="font-family: Nunito Sans, sans-serif; font-weight: 700">
             Computer Science and Programming
           </h3>
           <div class="profile col-md-3 ml-auto mr-auto">
@@ -135,29 +132,29 @@
             </div>
           </div>
           <div class="section text-center col-md-6 ml-auto mr-auto">
-            <h4 style="font-family: Railway, sans-serif; font-weight: 600">
+            <h4 style="font-family: Nunito Sans, sans-serif; font-weight: 700">
               Relevant Coursework Completed
             </h4>
             <ul
               class="text-center col-sm-6 ml-auto mr-auto"
               style="list-style: none"
             >
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
-                Web Development HTML-CSS
-              </li>
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
-                JavaScript Programming
-              </li>
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
-                Python Programming
-              </li>
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
-                Java Programming
-              </li>
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
                 C++ Programming
               </li>
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
+                Java Programming
+              </li>
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
+                Python Programming
+              </li>
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
+                JavaScript Development
+              </li>
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
+                Web Development HTML-CSS
+              </li>
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
                 Oracle SQL Database
               </li>
             </ul>
@@ -166,12 +163,10 @@
       </div>
       <div class="container">
         <div class="section text-center">
-          <h2
-            style="font-family: Red Hat Display, sans-serif; font-weight: 900"
-          >
+          <h2 style="font-family: Nunito Sans, sans-serif; font-weight: 800">
             University of Utah
           </h2>
-          <h3 style="font-family: Railway, sans-serif; font-weight: 700">
+          <h3 style="font-family: Nunito Sans, sans-serif; font-weight: 700">
             Strategic Communications
           </h3>
           <div class="profile col-md-6 ml-auto mr-auto">
@@ -184,26 +179,26 @@
             </div>
           </div>
           <div class="section text-center col-md-8 ml-auto mr-auto">
-            <h5 style="font-family: Railway, sans-serif; font-weight: 600">
+            <h4 style="font-family: Roboto Flex, sans-serif; font-weight: 600">
               Relevant Coursework Completed
-            </h5>
+            </h4>
             <ul
               class="text-center col-sm-6 ml-auto mr-auto"
               style="list-style: none"
             >
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
                 US Army ROTC Officer Training
               </li>
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
                 Military-Science Tactical Leadership
               </li>
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
                 Military-Science Applied Leadership
               </li>
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
                 Communications and Gender
               </li>
-              <li style="font-family: Railway, sans-serif; font-weight: 500">
+              <li style="font-family: Roboto Flex, sans-serif; font-weight: 500">
                 Psychology Memory and Cognition
               </li>
             </ul>
@@ -216,7 +211,7 @@
     <footer class="footer footer-default">
       <div
         class="container"
-        style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+        style="font-family: Roboto Flex, sans-serif; font-weight: 500"
       >
         <nav class="float-left">
           <ul>
