--- a/experience.html
+++ b/experience.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/material-kit.css" />
     <link rel="prefetch" href="about.html" />
     <link rel="prefetch" href="education.html" />
-    <link rel="prefetch" href="experience.html" />
+    <link rel="prefetch" href="index.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
           <a
             class="navbar-brand"
             href="index.html"
-            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+            style="font-family: Nunito Sans, sans-serif; font-weight: 500"
           >
             STEVEN CROSBY
           </a>
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse">
           <ul
             class="navbar-nav ml-auto"
-            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+            style="font-family: Nunito Sans, sans-serif; font-weight: 500"
           >
             <li class="nav-item">
               <a href="index.html" class="nav-link">
@@ -97,12 +97,13 @@
     >
       <div class="container">
         <div class="row">
-          <div class="col-md-8 ml-auto mr-auto">
+          <div class="col-md-10 ml-auto mr-auto">
             <div class="brand text-center">
               <h1
                 style="
-                  font-family: Red Hat Display, sans-serif;
-                  font-weight: 900;
+                  font-family: Nunito Sans, sans-serif;
+                  font-weight: 800;
+                  font-size: 6rem;
                 "
               >
                 Experience
@@ -121,7 +122,7 @@
             <br />
             <h2
               class="text-center"
-              style="font-family: Red Hat Display, sans-serif; font-weight: 700"
+              style="font-family: Nunito Sans, sans-serif; font-weight: 700"
             >
               PROGRAMMING
             </h2>
@@ -339,7 +340,7 @@
                         <h2
                           class="text-center"
                           style="
-                            font-family: Red Hat Display, sans-serif;
+                            font-family: Nunito Sans, sans-serif;
                             font-weight: 700;
                           "
                         >
@@ -443,7 +444,7 @@
     <footer class="footer footer-default">
       <div
         class="container"
-        style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+        style="font-family: Roboto Flex, sans-serif; font-weight: 500"
       >
         <nav class="float-left">
           <ul>
