--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
           <a
             class="navbar-brand"
             href="#"
-            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+            style="font-family: Roboto Flex, sans-serif; font-weight: 500"
           >
             STEVEN CROSBY
           </a>
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse">
           <ul
             class="navbar-nav ml-auto"
-            style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+            style="font-family: Roboto Flex, sans-serif; font-weight: 500"
           >
             <li class="nav-item">
               <a href="about.html" class="nav-link">
@@ -98,7 +98,7 @@
       <div class="profile-content">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 ml-auto mr-auto">
+            <div class="col-md-8 ml-auto mr-auto">
               <div class="profile">
                 <div class="avatar">
                   <img
@@ -109,30 +109,33 @@
                   <div class="name">
                     <h1
                       style="
-                        font-family: Red Hat Display, sans-serif;
-                        font-weight: 900;
+                        font-family: Nunito Sans, sans-serif;
+                        font-weight: 800;
+                        font-size: 6rem;
                       "
                     >
                       Steven Crosby
                     </h1>
-                    <p>&ensp;</p>
+                    <p>&ensp; &ensp;</p>
+
                     <h3
                       style="
-                        font-family: Red Hat Display, sans-serif;
+                        font-family: Nunito Sans, sans-serif;
                         font-weight: 700;
                       "
                     >
                       Software Design and Development
                     </h3>
-                    <p>&ensp;</p>
+                    <p>&ensp; &ensp;</p>
                     <h4
                       style="
-                        font-family: Red Hat Display, sans-serif;
-                        font-weight: 400;
+                        font-family: Nunito Sans, sans-serif;
+                        font-weight: 600;
                       "
                     >
-                      &ensp;JAVA&ensp; &ensp;PYTHON&ensp; &ensp;C++&ensp;
-                      &ensp;JAVASCRIPT&ensp; &ensp;HTML-CSS&ensp;
+                      &ensp;JAVA&ensp; &ensp; &ensp;&ensp; C/C++ &ensp; &ensp;
+                      &ensp;&ensp; PYTHON &ensp; &ensp; &ensp;&ensp; JAVASCRIPT
+                      &ensp; &ensp; &ensp;&ensp; HTML-CSS&ensp;
                     </h4>
                   </div>
                   <div class="row">
@@ -187,7 +190,7 @@
     <footer class="footer footer-default">
       <div
         class="container"
-        style="font-family: Red Hat Display, sans-serif; font-weight: 500"
+        style="font-family: Nunito Sans, sans-serif; font-weight: 500"
       >
         <nav class="float-left">
           <ul>
