--- a/experience.html
+++ b/experience.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -47,7 +47,7 @@
           <a
             class="navbar-brand"
             href="index.html"
-            style="font-family: Nunito Sans, sans-serif; font-weight: 500"
+            style="font-family: Poppins, sans-serif; font-weight: 500"
           >
             STEVEN CROSBY
           </a>
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse">
           <ul
             class="navbar-nav ml-auto"
-            style="font-family: Nunito Sans, sans-serif; font-weight: 500"
+            style="font-family: Poppins, sans-serif; font-weight: 500"
           >
             <li class="nav-item">
               <a href="index.html" class="nav-link">
@@ -97,13 +97,13 @@
     >
       <div class="container">
         <div class="row">
-          <div class="col-md-10 ml-auto mr-auto">
+          <div class="col-md-12 ml-auto mr-auto">
             <div class="brand text-center">
               <h1
                 style="
-                  font-family: Nunito Sans, sans-serif;
-                  font-weight: 800;
-                  font-size: 6rem;
+                  font-family: Poppins, sans-serif;
+                  font-weight: 700;
+                  font-size: 8rem;
                 "
               >
                 Experience
@@ -122,7 +122,7 @@
             <br />
             <h2
               class="text-center"
-              style="font-family: Nunito Sans, sans-serif; font-weight: 700"
+              style="font-family: Poppins, sans-serif; font-weight: 600"
             >
               PROGRAMMING
             </h2>
@@ -340,8 +340,8 @@
                         <h2
                           class="text-center"
                           style="
-                            font-family: Nunito Sans, sans-serif;
-                            font-weight: 700;
+                            font-family: Poppins, sans-serif;
+                            font-weight: 600;
                           "
                         >
                           TOOLS
@@ -444,7 +444,7 @@
     <footer class="footer footer-default">
       <div
         class="container"
-        style="font-family: Roboto Flex, sans-serif; font-weight: 500"
+        style="font-family: Poppins, sans-serif; font-weight: 500"
       >
         <nav class="float-left">
           <ul>
